emall-alibaba-gateway/emall-alibaba-gateway.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: emall-alibaba-gateway
  name: emall-alibaba-gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emall-alibaba-gateway
  template:
    metadata:
      name: emall-alibaba-gateway
      labels:
        app: emall-alibaba-gateway
        project: edev-alibaba-emall
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - emall-alibaba-gateway
                    - key: "project"
                      operator: In
                      values:
                        - edev-alibaba-emall
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: emall-alibaba-gateway
          image: repository:5000/emall-alibaba-gateway:<VERSION>
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 1500Mi
            requests:
              cpu: 100m
              memory: 500Mi
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 50
            periodSeconds: 10
            timeoutSeconds: 5
            httpGet:
              scheme: HTTP
              port: 9009
              path: /actuator/health
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: emall-alibaba-gateway
  name: emall-alibaba-gateway
  namespace: default
spec:
  ports:
    - port: 9009
      targetPort: 9009
  selector:
    app: emall-alibaba-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-edev-emall
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: emall
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emall-alibaba-gateway
                port:
                  number: 9009
